--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -1,18 +1,89 @@
+html {
+  margin: 0;
+  background-image: url("../../assets/menu.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow: hidden;
+}
+
 body {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  background-color: #f0f0f0;
 }
 
-#startPage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #gameCanvas {
+* {
+  box-sizing: border-box;
+}
+
+img {
+  position: absolute;
+  z-index: -1;
+  right: 20px;
+}
+
+@media screen and (max-height: 800px) {
+  img {
     display: none;
-    border: 1px solid black;
-  }  
+  }
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.menu__button {
+  margin: 10px 0;
+  padding: 10px 20px;
+  font-size: 32px;
+  font-family: Didot, serif;
+  color: white;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+#exit__button {
+  position: absolute;
+  padding: 0 80px;
+  font-size: 16px;
+  font-family: Didot, serif;
+  color: black;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+#modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+#modalContent {
+  background: lightgrey;
+  padding: 25px;
+  border-radius: 5px;
+  text-align: center;
+  font-family: Didot, serif;
+}
+
+canvas {
+  border: 1px solid black;
+}
